--- a/report.tex
+++ b/report.tex
@@ -496,34 +496,21 @@ void draw() {
 	OpenJSCAD provides two user interfaces, one command-line interface and one graphical user interface as a web page.
 	The first can be used for batch processing (running programs) while the second integrates an editor to edit a program and a 3D view for viewing the results of that program.
 
-	%TODO fucking better explain dot syntax
-	OpenJSCAD's language supports two syntaxes, one based on message passing (or method invocation/dot syntax) and one based on calling functions.
-	Both of these syntaxes are already present in Javascript. 
-	Many operations provided produce a new object and do not change their parameters. 
-	This allows us to follow a functional programming paradigm and since there are fewer side-effects to know about it is easier to understand a program written using them.
+	OpenJSCAD makes its functionality available as functions as well as methods on its objects which makes writing programs more flexible.
+	This way, one can write either \lstinline|a.union(b).translate([1,0,3])|, \lstinline|translate(union(a,b), [1,0,3])| or \lstinline|union(a,b).translate([1,0,3])| depending on what is more readable and while producing the same result.
+	\footnote{The first can be read as \emph{a united with b, translated by [1,0,3]}, the second as \emph{the translation of the union of a and b by [1,0,3]} and the third as \emph{the union of a and b, translated by [1,0,3]}.}
+	
+	Both OpenJSCAD's functions and methods return new objects and do not have side-effects. 
+	This allows the programmer to follow the functional programming paradigm and makes it easier to understand programs, as there less side-effects that could change their behavior.
 
-	A problem that can arise while writing and testing jscad programs is that there is no help on getting the parameters for operations right and it is frustrating to spend more time than acceptable trying to understand why a certain operation is not producing the desired result. 
+	A problem that can arise while writing and testing JSCAD programs is that there is no help on getting the parameters for operations right and it is frustrating to spend more time than acceptable trying to understand why a certain operation is not producing the desired result. 
 	This problem is even more relevant when most of the operations have multiple optional parameters and parameters that replace others. 
 	Currently the only help available is OpenJSCAD's documentation (a tour on its functionality), the online community around OpenJSCAD and, since Javascript is the core of the language, web browsers' Javascript developer tools.
 
-	There is also a problem using the function call syntax, namely its readability.
-	The way function calls are written may not provide the flexibility needed for arranging the code in a readable manner. 
-	This is especially true if a simple text editor is used. 
-	%While assigning intermediary results to variables can help ``unnesting'' but it is sometimes inconvenient. 
-	On top of this, OpenJSCAD is mainly just Javascript and like so Javascript's strange behavior about semicolon insertion is carried over. 
-	%TODO fucking explain javascript semicolons
+	There are also problems when the programmer tries to format the source code to make it more readable.
+	One of the most common bugs is one that happens when Javascript's automatic semicolon insertion adds a semicolon between a return statement and its intended return expression, making it return nothing.
+	As the source code looks correct, with \emph{return} in one line and an expression in the next, it is hard to find and correct it.
 
-	%A good thing about being based on Javascript is that functions are first-class citizens.
-	%It enables the programmer to specify parameters of functions as other functions 
-	%Examples of this advantage can be found in \textbf{leitao abstract geometry n high order programming}.
-
-	%For example, one can have a function describing how to make a building which receives functions describing how parts like balconies and windows are made as parameters.
-
-	%Some functions in OpenJSCAD and their parameters.
-	%function parameters result 
-	%Each primitive has a lot of options on how to call it.
-	%Its possible to round the edges of polyhedral primitives.
-	%Non-polyhedral primitives are always converted to polyhedral approximations.
 
 %----------------------------------------------------
 %NAVarchitecture
